pagination fix, links to form fix

--- a/students/static/css/main.css
+++ b/students/static/css/main.css
@@ -37,10 +37,8 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 10px;
 }
 
-/* Journal Table Styles */
 td.day-box,
 th.day-header {
-    /*padding: 4px !important;*/
     vertical-align: middle !important;
     text-align: center;
 }
@@ -50,7 +48,8 @@ td.group-box {
     vertical-align: middle !important;
 }
 
-#ajax-progress-indicator {
+#ajax-progress-indicator,
+.unvisible {
     display: none;
 }
 
@@ -65,8 +64,4 @@ td.group-box {
     top: 0;
     height: 150px;
     width: 150px;
-}
-
-.unvisible {
-    display: none;
 }
