--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -10,7 +10,7 @@
 {% block content %}
 
 <!-- Add Student Button -->
-<a class="btn btn-primary student-group-add-edit-form-link" href="{% url "students_add" %}">Додати Студента</a>
+<a class="btn btn-primary form-link" href="{% url "students_add" %}">Додати Студента</a>
 
 <!-- Start Students Listing -->
 {% if students %}
@@ -66,12 +66,12 @@
                 {% endif %}
             </td>
                 <td class="student-box">
-                    <a title="Редагувати" class="student-group-add-edit-form-link" href="{% url "students_edit" student.id %}">
+                    <a title="Редагувати" class="form-link" href="{% url "students_edit" student.id %}">
                         {{ student.last_name }}
                     </a>
                 </td>
                 <td class="student-box">
-                    <a title="Редагувати" class="student-group-add-edit-form-link" href="{% url "students_edit" student.id %}">
+                    <a title="Редагувати" class="form-link" href="{% url "students_edit" student.id %}">
                         {{ student.first_name }}
                     </a>
                 </td>
@@ -82,7 +82,7 @@
                         Дія <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-right">
-                        <li><a href="{% url "students_edit" student.id %}" class="student-group-add-edit-form-link">Редагувати</a></li>
+                        <li><a href="{% url "students_edit" student.id %}" class="form-link">Редагувати</a></li>
                         <li><a href="{% url "journal" student.id %}">Відвідування</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="{% url "students_delete" student.id %}">Видалити</a></li>
