--- a/students/templates/students/journal.html
+++ b/students/templates/students/journal.html
@@ -54,7 +54,7 @@
                             {% endif %}
                         </td>
                         <td class="student-box">
-                            <a href="{% url "students_edit" student.id %}" title="Редагувати" target="_blank">
+                            <a href="{% url "students_edit" student.id %}" class="form-link" title="Редагувати">
                                 {{ student.fullname }}
                             </a>
                         </td>
