--- a/students/templates/contact_admin/form.html
+++ b/students/templates/contact_admin/form.html
@@ -9,7 +9,7 @@
 
 {% block status_message %}
     {% if form.errors %}
-        <div class="alert alert-warning" role="alert">Будь-ласка, виправте наступні помилки</div>
+        <div class="alert alert-danger" role="alert">Будь-ласка, виправте наступні помилки:</div>
     {% endif %}
     {{ block.super }}
 {% endblock %}
