--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -61,16 +61,16 @@
             <div class="col-xs-12">
                 <ul class="nav nav-tabs">
                     <li role="presentation" {% if students_url == request.path %} class="active" {% endif %}>
-                        <a class="tab-link" href="{% url "home" %}">Студенти</a>
+                        <a href="{% url "home" %}">Студенти</a>
                     </li>
                     <li role="presentation" {% if journal_url in request.path %} class="active" {% endif %}>
-                        <a class="tab-link" href="{% url "journal" student.id %}">Відвідування</a>
+                        <a href="{% url "journal" student.id %}">Відвідування</a>
                     </li>
                     <li role="presentation" {% if groups_url in request.path %} class="active" {% endif %}>
-                        <a class="tab-link" href="{% url "groups" %}">Групи</a>
+                        <a href="{% url "groups" %}">Групи</a>
                     </li>
                     <li role="presentation" {% if contact_admin in request.path %} class="active" {% endif %}>
-                        <a class="tab-link" href="{% url "contact_admin" %}">Контакт</a>
+                        <a href="{% url "contact_admin" %}">Контакт</a>
                     </li>
                 </ul>
             </div>
@@ -112,7 +112,10 @@
     <!-- End container -->
 
     <!-- Add spinner -->
-    <img src="{{ PORTAL_URL }}{% static "img/spinner.gif" %}" id="modal-loader" class="unvisible">
+    <div class="ajax-loader">
+        <img src="{{ PORTAL_URL }}{% static "img/spinner.gif" %}">
+    </div>
+
 
     <!-- Start Modal student add/edit -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -124,9 +127,11 @@
                     </button>
                     <h4 class="modal-title" id="MyModalLabel"></h4>
                 </div>
-                <div class="modal-body"></div>
                 <!-- Add spinner -->
-                <img src="{{ PORTAL_URL }}{% static "img/spinner.gif" %}" id="send-loader" class="unvisible">
+                <div class="modal-body"></div>
+                <div class="ajax-loader-modal">
+                    <img src="{{ PORTAL_URL }}{% static "img/spinner.gif" %}">
+                </div>
                 <div class="modal-footer"></div>
             </div>
         </div>
