--- a/students/templates/students/journal.html
+++ b/students/templates/students/journal.html
@@ -10,13 +10,13 @@
 {% block content %}
     {% if not students %}
         <div class="alert alert-warning">
-            Студенти відсутні. Будь-ласка, <a href="{% url "students_add" %}">додайте</a> першого.
+            Студенти відсутні. Будь-ласка, <a class="form-link" href="{% url "students_add" %}">додайте</a> першого.
         </div>
     {% else %}
         <div class="alert alert-warning" id="ajax-success">
             Зміни в журнал зберігаються автоматично при кожному кліку в клітинці таблиці.
             <span id="ajax-progress-indicator">Йде збереження...</span>
-            <span id="ajax-error"></span>
+            <span id="ajax-error">Виникла помилка, дані не збереженно!</span>
         </div>
 
         <p id="journal-nav" class="text-center">
