--- a/students/templates/students/journal.html
+++ b/students/templates/students/journal.html
@@ -20,13 +20,12 @@
         </div>
 
         <p id="journal-nav" class="text-center">
-            <a href="?month={{ prev_month }}" title="Попередній Місяць">&larr;</a>
+            <a href="{{ journal_url }}?month={{ prev_month }}" title="Попередній Місяць">&larr;</a>
             <!-- TODO: translate month name -->
             <strong>{{ month_verbose }} {{ year }}</strong>
-            <a href="?month={{ next_month }}" title="Наступний Місяць">&rarr;</a>
+            <a href="{{ journal_url }}?month={{ next_month }}" title="Наступний Місяць">&rarr;</a>
         </p>
-
-        <table class="table table-hover table-striped table-bordered table-condensed" id="students-journal">
+        <table class="table table-hover table-striped table-bordered table-condensed">
             <thead>
                 <tr class="header">
                     <th class="num day-header">#</th>
