--- a/students/templates/students/groups_list.html
+++ b/students/templates/students/groups_list.html
@@ -59,7 +59,7 @@
                     <ul class="dropdown-menu dropdown-menu-right">
                         <li><a class="form-link" href="{% url "groups_edit" group.id %}">Редагувати</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="{% url "groups_delete" group.id %}">Видалити</a></li>
+                        <li><a class="form-link" href="{% url "groups_delete" group.id %}">Видалити</a></li>
                     </ul>
                 </div>
             </td>
