journal month nav refactor

--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -32,7 +32,7 @@
 
 <body>
     <!-- Start container -->
-    <div class="container">
+    <div id="container" class="container">
 
         <!-- Start header -->
         <div class="row" id="header">
