--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -120,7 +120,7 @@
     <!-- Start Modal student add/edit -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content">
+            <div class="modal-content col-sm-10">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
