--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" value="Система обліку студентів Навчального Закладу">
+    <meta name="description" content="Система обліку студентів Навчального Закладу">
     <title>Сервіс обліку студентів - {% block meta_title %}{% endblock meta_title %}</title>
 
     <!-- Bootstrap CSS -->
