--- a/students/templates/students/events_log.html
+++ b/students/templates/students/events_log.html
@@ -15,20 +15,20 @@
     <table class="table table-hover table-striped table-condensed">
         <thead>
         <tr>
-            <th>Час створення</th>
+            <th>Час події</th>
 {#            <th>Тип дії</th>#}
 {#            <th>Користувач</th>#}
-            <th>Опис дії</th>
+            <th>Опис події</th>
         </tr>
         </thead>
 
         <tbody>
         {% for ev in events_log %}
-            <tr class="{% if ev.evt_type == 'C' %}success{% endif %}{% if ev.evt_type == 'U' %}warning{% endif %}{% if ev.evt_type == 'D' %}danger{% endif %}">
+            <tr class="{% if ev.evt_type == 'C' %}success{% endif %}{% if ev.evt_type == 'U' %}warning{% endif %}{% if ev.evt_type == 'D' %}danger{% endif %}{% if ev.evt_type == 'M' %}info{% endif %}">
                 <td>{{ ev.timestamp }}</td>
 {#                <td>{{ ev.evt_type }}</td>#}
 {#                <td>{{ ev.evt_user }}</td>#}
-                <td>{{ ev.evt_description }}</td>
+                <td>{{ ev.evt_desc }}</td>
             </tr>
         {% endfor %}
         </tbody>
