--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -37,23 +37,37 @@
         <!-- Start header -->
         <div class="row" id="header">
             <!-- Logo -->
-            <div class="col-xs-8">
+            <div class="col-xs-6">
                 <h1>{% block logo %}Сервіс Обліку Студентів{% endblock logo %}</h1>
             </div>
+
             <!-- Groups Selector -->
-            <div class="col-xs-4" id="group-selector">
-                <strong>Група:</strong>
-                <select>
-                    {% block group_menu %}
-                    <option value="">Усі Студенти</option>
-                    {% for group in GROUPS %}
-                        <option value="{{ group.id }}" {% if group.selected %} selected="1" {% endif %}>
-                            {{ group.title }} {% if group.leader %}, {{ group.leader }}{% endif %}
-                        </option>
-                    {% endfor %}
-                    {% endblock group_menu %}
-                </select>
-            </div>
+            {% if user.is_authenticated %}
+                <div class="col-xs-4" id="group-selector">
+                    <strong>Група:</strong>
+                    <select>
+                        {% block group_menu %}
+                        <option value="">Усі Студенти</option>
+                        {% for group in GROUPS %}
+                            <option value="{{ group.id }}" {% if group.selected %} selected="1" {% endif %}>
+                                {{ group.title }} {% if group.leader %}, {{ group.leader }}{% endif %}
+                            </option>
+                        {% endfor %}
+                        {% endblock group_menu %}
+                    </select>
+                </div>
+                <!-- User's toolbar for authenticated users -->
+                <div class="col-xs-2" id="user-toolbar">
+                    <span>{{ user.username }}</span> |
+                    <a href="{% url "users:auth_logout" %}">Вихід</a>
+                </div>
+            {% else %}
+                <!-- User's toolbar for anonymous users -->
+                <div class="col-xs-2" id="user-toolbar">
+                    <a href="{% url "users:auth_login" %}">Вхід</a> |
+                    <a href="{% url "users:registration_register" %}">Реєстрація</a>
+                </div>
+            {% endif %}
         </div>
         <!-- End header -->
 
@@ -62,21 +76,25 @@
         <div class="row" id="sub-header">
             <div class="col-xs-12">
                 <ul class="nav nav-tabs">
-                    <li role="presentation" {% if students_url == request.path %} class="active" {% endif %}>
+                    <li role="presentation" {% if request.path == students_url %} class="active" {% endif %}>
                         <a href="{% url "home" %}">Студенти</a>
                     </li>
-                    <li role="presentation" {% if journal_url in request.path %} class="active" {% endif %}>
-                        <a href="{% url "journal" student.id %}">Відвідування</a>
-                    </li>
-                    <li role="presentation" {% if groups_url in request.path %} class="active" {% endif %}>
-                        <a href="{% url "groups" %}">Групи</a>
-                    </li>
-                    <li role="presentation" {% if events_log_url in request.path %} class="active" {% endif %}>
-                        <a href="{% url "events_log" %}">Події</a>
-                    </li>
-                    <li role="presentation" {% if contact_url in request.path %} class="active" {% endif %}>
-                        <a href="{% url "contact_admin" %}">Контакт</a>
-                    </li>
+                    {% if user.is_authenticated %}
+                        <li role="presentation" {% if request.path in journal_url %} class="active" {% endif %}>
+                            <a href="{% url "journal" student.id %}">Відвідування</a>
+                        </li>
+                        <li role="presentation" {% if request.path in groups_url %} class="active" {% endif %}>
+                            <a href="{% url "groups" %}">Групи</a>
+                        </li>
+                        <li role="presentation" {% if request.path in events_log_url %} class="active" {% endif %}>
+                            <a href="{% url "events_log" %}">Події</a>
+                        </li>
+                    {% endif %}
+                    {% if perms.auth.add_user %}
+                        <li role="presentation" {% if request.path in contact_url %} class="active" {% endif %}>
+                            <a href="{% url "contact_admin" %}">Контакт</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
